--- a/redhill.html
+++ b/redhill.html
@@ -67,14 +67,20 @@
 	    </div>
 
 	    
-	    <h2>Club Content</h2>
+	    <h2>Scorecards (offline)</h2>
             <ul class="rounded">
                 <li class="arrow"><a href="#teams">Teams</a></li>
+	    </ul>
+            <h2>NottsBA (online)</h2>
+            <ul class="rounded online-required">
+                <li class="forward"><a href="http://www.nottsba.co.uk/mobile/club_tables.php?cnm=redhill" target="_webapp">League Results</a></li>
+                <li class="forward"><a href="http://www.nottsba.co.uk/mobile/venues.php" target="_webapp">Venues</a></li>
+                <li class="forward"><a href="http://www.nottsba.co.uk/mobile/clubs.php" target="_webapp">Clubs</a></li>
+                <li class="forward"><a href="http://www.nottsba.co.uk/mobile/stringers.php" target="_webapp">Stringers</a></li>
+                <li class="forward"><a href="http://www.nottsba.co.uk/mobile/coaches.php" target="_webapp">Coaches</a></li>
             </ul>
-            <h2>External Links</h2>
-            <ul class="rounded">
-                <li class="forward"><a href="http://www.nottsba.co.uk" target="_blank">Notts BA</a></li>
-                <li class="forward"><a href="http://www.badmintonengland.co.uk" target="_blank">Badminton England</a></li>
+            <ul class="rounded offline-only">
+		<li>Connection not detected</li>
             </ul>
 
             <div class="info">
@@ -92,9 +98,7 @@
                 <li class="arrow"><a href="#M1">Mens 1 <small> Division 3A</small></a></li>
                 <li class="arrow"><a href="#M2">Mens 2 <small> Division 5B</small></a></li>
                 <li class="arrow"><a href="#X1">Mixed 1 <small> Division 3B</small></a></li>
-                <li class="arrow"><a href="#X2">Mixed 2 <small> Division 4B</small></a></li>
-                <li class="arrow"><a href="#X3">Mixed 3 <small> Division 5A</small></a></li>
-                <li class="arrow"><a href="#L">Ladies  <small> Division 1</small></a></li>
+                <li class="arrow"><a href="#X2">Mixed 2 <small> Division 5A</small></a></li>
             </ul>
         </div>
 
@@ -104,11 +108,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M1-1"><small class="M1-1D"></small><a href="#match">Arboretum 1</a></li>
-                <li class="arrow" id="M1-2"><small class="M1-2D"></small><a href="#match">Beeston Valley 1</a></li>
-                <li class="arrow" id="M1-3"><small class="M1-3D"></small><a href="#match">Boots 2</a></li>
-                <li class="arrow" id="M1-4"><small class="M1-4D"></small><a href="#match">Rushcliffe Arena 1</a></li>
-                <li class="arrow" id="M1-5"><small class="M1-5D"></small><a href="#match">Southwell Centre 1</a></li>
+                <li class="arrow" id="M1-1"><a href="#match">Beeston Valley 1  <small class="M1-1D"></small></a></li>
+                <li class="arrow" id="M1-2"><a href="#match">Boots 2  <small class="M1-2D"></small></a></li>
+                <li class="arrow" id="M1-3"><a href="#match">Kimberley 1  <small class="M1-3D"></small></a></li>
+                <li class="arrow" id="M1-4"><a href="#match">Phoenixwood 2  <small class="M1-4D"></small></a></li>
+                <li class="arrow" id="M1-5"><a href="#match">Rolls Royce 3  <small class="M1-5D"></small></a></li>
+                <li class="arrow" id="M1-6"><a href="#match">University 4  <small class="M1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -118,11 +123,11 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M2-1"><small class="M2-1D"></small><a href="#match">Arboretum 3</a></li>
-                <li class="arrow" id="M2-2"><small class="M2-2D"></small><a href="#match">Beeston Valley 3</a></li>
-                <li class="arrow" id="M2-3"><small class="M2-3D"></small><a href="#match">Mapperley Park 4</a></li>
-                <li class="arrow" id="M2-4"><small class="M2-4D"></small><a href="#match">Naseeb 3</a></li>
-                <li class="arrow" id="M2-5"><small class="M2-5D"></small><a href="#match">St Giles 3</a></li>
+                <li class="arrow" id="M2-1"><a href="#match">Beeston Valley 3  <small class="M2-1D"></small></a></li>
+                <li class="arrow" id="M2-2"><a href="#match">East Leake 4  <small class="M2-2D"></small></a></li>
+                <li class="arrow" id="M2-3"><a href="#match">St Giles 3  <small class="M2-3D"></small></a></li>
+                <li class="arrow" id="M2-4"><a href="#match">Unity  <small class="M2-4D"></small></a></li>
+                <li class="arrow" id="M2-5"><a href="#match">Woodborough 2  <small class="M2-5D"></small></a></li>
             </ul>
         </div>
 
@@ -132,12 +137,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X1-1"><small class="X1-1D"></small><a href="#match">Beeston Valley 2</a></li>
-                <li class="arrow" id="X1-2"><small class="X1-2D"></small><a href="#match">Boots 2</a></li>
-                <li class="arrow" id="X1-3"><small class="X1-3D"></small><a href="#match">Crusader</a></li>
-                <li class="arrow" id="X1-4"><small class="X1-4D"></small><a href="#match">East Leake 2</a></li>
-                <li class="arrow" id="X1-5"><small class="X1-5D"></small><a href="#match">Kimberley 1</a></li>
-                <li class="arrow" id="X1-6"><small class="X1-6D"></small><a href="#match">Phoenixwood 4</a></li>
+                <li class="arrow" id="X1-1"><a href="#match">Beeston Valley 1  <small class="X1-1D"></small></a></li>
+                <li class="arrow" id="X1-2"><a href="#match">Boots 2  <small class="X1-2D"></small></a></li>
+                <li class="arrow" id="X1-3"><a href="#match">Byron 3  <small class="X1-3D"></small></a></li>
+                <li class="arrow" id="X1-4"><a href="#match">Kimberley 1  <small class="X1-4D"></small></a></li>
+                <li class="arrow" id="X1-5"><a href="#match">Mapperley Park 5  <small class="X1-5D"></small></a></li>
+                <li class="arrow" id="X1-6"><a href="#match">Rolls Royce  <small class="X1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -147,42 +152,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="X2-1"><small class="X2-1D"></small><a href="#match">Beeston Fields 4</a></li>
-                <li class="arrow" id="X2-2"><small class="X2-2D"></small><a href="#match">Boots 3</a></li>
-                <li class="arrow" id="X2-3"><small class="X2-3D"></small><a href="#match">Carlton 2</a></li>
-                <li class="arrow" id="X2-4"><small class="X2-4D"></small><a href="#match">Mapperley Park 5</a></li>
-                <li class="arrow" id="X2-5"><small class="X2-5D"></small><a href="#match">Rolls Royce</a></li>
-                <li class="arrow" id="X2-6"><small class="X2-6D"></small><a href="#match">University Staff</a></li>
-            </ul>
-        </div>
-
-        <div id="X3" class="fixtures">
-            <div class="toolbar">
-                <h1>Mixed 3</h1>
-                <a href="#" class="back">Teams</a>
-            </div>
-            <ul class="rounded">
-                <li class="arrow" id="X3-1"><small class="X3-1D"></small><a href="#match">Arboretum 2</a></li>
-                <li class="arrow" id="X3-2"><small class="X3-2D"></small><a href="#match">Byron 5</a></li>
-                <li class="arrow" id="X3-3"><small class="X3-3D"></small><a href="#match">David Lloyd Aspley 3</a></li>
-                <li class="arrow" id="X3-4"><small class="X3-4D"></small><a href="#match">East Leake 3</a></li>
-                <li class="arrow" id="X3-5"><small class="X3-5D"></small><a href="#match">Nottingham Vets 4</a></li>
-                <li class="arrow" id="X3-6"><small class="X3-6D"></small><a href="#match">St Giles 2</a></li>
-            </ul>
-        </div>
-
-        <div id="L" class="fixtures">
-            <div class="toolbar">
-                <h1>Ladies </h1>
-                <a href="#" class="back">Teams</a>
-            </div>
-            <ul class="rounded">
-                <li class="arrow" id="L-1"><small class="L-1D"></small><a href="#match">Beeston Valley 1</a></li>
-                <li class="arrow" id="L-2"><small class="L-2D"></small><a href="#match">Bingham 3</a></li>
-                <li class="arrow" id="L-3"><small class="L-3D"></small><a href="#match">Byron 1</a></li>
-                <li class="arrow" id="L-4"><small class="L-4D"></small><a href="#match">East Leake</a></li>
-                <li class="arrow" id="L-5"><small class="L-5D"></small><a href="#match">Mansfield Oaktree</a></li>
-                <li class="arrow" id="L-6"><small class="L-6D"></small><a href="#match">Nottingham Vets 1</a></li>
+                <li class="arrow" id="X2-1"><a href="#match">Arboretum 2  <small class="X2-1D"></small></a></li>
+                <li class="arrow" id="X2-2"><a href="#match">Byron 5  <small class="X2-2D"></small></a></li>
+                <li class="arrow" id="X2-3"><a href="#match">Carlton 2  <small class="X2-3D"></small></a></li>
+                <li class="arrow" id="X2-4"><a href="#match">Crusader 2  <small class="X2-4D"></small></a></li>
+                <li class="arrow" id="X2-5"><a href="#match">Kimberley 3  <small class="X2-5D"></small></a></li>
+                <li class="arrow" id="X2-6"><a href="#match">Nottingham Vets 4  <small class="X2-6D"></small></a></li>
             </ul>
         </div>
 
@@ -194,7 +169,7 @@
             </div>
 
             <h2>Opposition Team</h2>
-		<ul class="rounded"><li><input type="text" id="oppTeam" placeholder="Enter team name" /></li></ul>
+		<ul class="rounded"><li class="oppTeam"></li></ul>
             <h2>Venue</h2>
             	<ul class="rounded"><li><input type="text" id="matchVenue" placeholder="Enter match venue" /></li></ul>
             <h2>Other Details</h2>
@@ -218,33 +193,109 @@
 		</ul>
 	</div>
 
+	<div id="ourPlayers">
+		<div class="toolbar">
+			<h1>Our Team</h1>
+			<a class="back" href="#match">Match</a>
+			<a class="button slideup" id="SavePlayers" href="#">Save</a>
+		</div>
+
+		<h2>Pair 1</h2>
+		<ul class="individual">
+			<li><input type="text" id="ourPlayer1" placeholder="Enter player name" /></li>
+			<li><input type="text" id="ourPlayer2" placeholder="Enter player name" /></li>
+		</ul>
+		<h2>Pair 2</h2>
+		<ul class="individual">
+			<li><input type="text" id="ourPlayer3" placeholder="Enter player name" /></li>
+			<li><input type="text" id="ourPlayer4" placeholder="Enter player name" /></li>
+		</ul>
+		<h2>Pair 3</h2>
+		<ul class="individual">
+			<li><input type="text" id="ourPlayer5" placeholder="Enter player name" /></li>
+			<li><input type="text" id="ourPlayer6" placeholder="Enter player name" /></li>
+		</ul>
+
+		<ul class="individual">
+			<li><a href="#" id="ourPlayers2oppPlayers">Opposition</a></li>
+			<li><a href="#" id="ourPlayers2scorecard">Scorecard</a></li>
+		</ul>
+	</div>
+        <div id="oppPlayers">
+            <div class="toolbar">
+                <h1>Opposition</h1>
+                <a class="back" href="#match">Match</a>
+                <a class="button slideup" id="SavePlayers2" href="#">Save</a>
+            </div>
+
+            <h2>Pair 1</h2>
+            	<ul class="individual">
+		<li><input type="text" id="oppPlayer1" placeholder="Enter player name" /></li>
+            	<li><input type="text" id="oppPlayer2" placeholder="Enter player name" /></li></ul>
+            <h2>Pair 2</h2>
+            	<ul class="individual">
+		<li><input type="text" id="oppPlayer3" placeholder="Enter player name" /></li>
+            	<li><input type="text" id="oppPlayer4" placeholder="Enter player name" /></li></ul>
+            <h2>Pair 3</h2>
+            	<ul class="individual">
+		<li><input type="text" id="oppPlayer5" placeholder="Enter player name" /></li>
+            	<li><input type="text" id="oppPlayer6" placeholder="Enter player name" /></li></ul>
+
+		<ul class="individual">
+	            	<li><a href="#" id="oppPlayers2scorecard">Scorecard</a></li>
+	            	<li><a href="#" id="oppPlayers2ourPlayers">Our Team</a></li>
+		</ul>
+	</div>
+
 	<div id="scorecard">
             <div class="toolbar">
                 <h1>Scorecard</h1>
-                <a class="back" href="#match">Match</a>
-                <a class="button slideup" id="AltView" href="#">Alt View</a>
+                <a class="back" href="#scorecard">Match</a>
+                <a class="button flip" id="ShowPreview" href="#notes">Report</a>
             </div>
-            <h2>Rubbers</h2>
-		<table class="overview">
+        <ul class="individual">
+		<li><select id="toggleTeam">
+				<option value ="0">Home</option>
+				<option value ="1">Away</option>
+				<option value ="2">Home - Away</option>
+		</select></li>
+		<li><select id="toggleType">
+				<option value ="0">Sequence</option>
+				<option value ="1">Rubbers</option>
+				<option value ="2">Games</option>
+				<option value ="3">Aces</option>
+		</select></li></ul>
+
+		<table id="ovtable" class="overview">
             	<tr>
             		<td class="rubber" id="h1v1">1</td>
             		<td class="rubber" id="h1v2">8</td>
             		<td class="rubber" id="h1v3">6</td>
+            		<td class="ovcolumn" id="h1v4">Tap</td>
             	</tr>
             	<tr>
             		<td class="rubber" id="h2v1">4</td>
             		<td class="rubber" id="h2v2">2</td>
             		<td class="rubber" id="h2v3">9</td>
+            		<td class="ovcolumn" id="h2v4">cells</td>
             	</tr>
             	<tr>
             		<td class="rubber" id="h3v1">7</td>
             		<td class="rubber" id="h3v2">5</td>
             		<td class="rubber" id="h3v3">3</td>
+            		<td class="ovcolumn" id="h3v4">to edit</td>
+            	</tr>
+            	<tr id="ovtotals">
+            		<td class="ovrow" id="h4v1">-</td>
+            		<td class="ovrow" id="h4v2">-</td>
+            		<td class="ovrow" id="h4v3">-</td>
+            		<td class="ovrow" id="h4v4">-</td>
             	</tr>
 		</table>
-		<br />			
 
-		<table class="summary">
+		<br />
+
+		<table id="ovsummary" class="summary">
             	<tr>
             		<td></td>
             		<td>Rubbers</td>
@@ -264,12 +315,7 @@
             		<td id="awayAces"></td>
             	</tr>
 		</table>
-		<ul class="individual">
-	            	<li><a href="#" id="scorecard2ourPlayers">Our Team</a></li>
-	            	<li><a href="#" id="scorecard2oppPlayers">Opp Team</a></li>
-		</ul>	
 	</div>
-
 	<div id="rubber">
 		<div class="toolbar">
                 <h1>Rubber</h1>
@@ -302,57 +348,37 @@
  		<div class="oppPairFull"></div>
 	</div>
 
-        <div id="ourPlayers">
+	<div id="preview">
             <div class="toolbar">
-                <h1>Our Team</h1>
-                <a class="back" href="#match">Match</a>
-                <a class="button slideup" id="SavePlayers" href="#">Save</a>
+                <h1>Match Report</h1>
+                <a class="back" href="#">back</a>
+                <a class="button slideup" id="SendMail" href="#">Email</a>
             </div>
 
-            <h2>Pair 1</h2>
-            	<ul class="individual">
-		<li><input type="text" id="ourPlayer1" placeholder="Enter player name" /></li>
-            	<li><input type="text" id="ourPlayer2" placeholder="Enter player name" /></li></ul>
-            <h2>Pair 2</h2>
-            	<ul class="individual">
-		<li><input type="text" id="ourPlayer3" placeholder="Enter player name" /></li>
-            	<li><input type="text" id="ourPlayer4" placeholder="Enter player name" /></li></ul>
-            <h2>Pair 3</h2>
-            	<ul class="individual">
-		<li><input type="text" id="ourPlayer5" placeholder="Enter player name" /></li>
-            	<li><input type="text" id="ourPlayer6" placeholder="Enter player name" /></li></ul>
+		<h2>Sort results by...</h2>
+        <ul class="individual">
+		<li><select id="sort1">
+				<option value ="1" SELECTED>Home pairing</option>
+				<option value ="2">Away pairing</option>
+		</select></li>
+		<li><select id="sort2">
+				<option value ="0" SELECTED>Sequence</option>
+				<option value ="1">Home pairing</option>
+				<option value ="2">Away pairing</option>
+		</select></li></ul>
 
-		<ul class="individual">
-	            	<li><a href="#" id="ourPlayers2oppPlayers">Opposition</a></li>
-	            	<li><a href="#" id="ourPlayers2scorecard">Scorecard</a></li>
-		</ul>
+		<h2>Email Subject</h2>
+			<ul class="rounded">
+				<li id="NoteTitle">Default Email Subject Goes Here</li>
+			</ul>
+		<h2>Email Body</h2>
+			<ul class="rounded">
+				<li id="FixtureNotes"></li>
+				<li><textarea id="PlayerNotes" placeholder="Player Details"></textarea></li>
+				<li><textarea id="NoteDetails" placeholder="(optional comments)"></textarea></li>
+				<li><textarea id="ResultNotes" placeholder="Result Details"></textarea></li>
+			</ul>
 	</div>
-        <div id="oppPlayers">
-            <div class="toolbar">
-                <h1>Opposition</h1>
-                <a class="back" href="#match">Match</a>
-                <a class="button slideup" id="SavePlayers2" href="#">Save</a>
-            </div>
-
-            <h2>Pair 1</h2>
-            	<ul class="individual">
-		<li><input type="text" id="oppPlayer1" placeholder="Enter player name" /></li>
-            	<li><input type="text" id="oppPlayer2" placeholder="Enter player name" /></li></ul>
-            <h2>Pair 2</h2>
-            	<ul class="individual">
-		<li><input type="text" id="oppPlayer3" placeholder="Enter player name" /></li>
-            	<li><input type="text" id="oppPlayer4" placeholder="Enter player name" /></li></ul>
-            <h2>Pair 3</h2>
-            	<ul class="individual">
-		<li><input type="text" id="oppPlayer5" placeholder="Enter player name" /></li>
-            	<li><input type="text" id="oppPlayer6" placeholder="Enter player name" /></li></ul>
-
-		<ul class="individual">
-	            	<li><a href="#" id="oppPlayers2scorecard">Scorecard</a></li>
-	            	<li><a href="#" id="oppPlayers2ourPlayers">Our Team</a></li>
-		</ul>
-	</div>
-
 
     </body>
 </html>
