--- a/woodborough.html
+++ b/woodborough.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html manifest="scorecard.manifest">
+<html manifest="manifest.php?include=woodborough.html">
     <head>
         <meta charset="UTF-8" />
         <title>Woodborough Scorecard</title>
@@ -12,8 +12,10 @@
 
         <script src="lib/jqtouch/jquery.1.3.2.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="lib/jqtouch/jqtouch.min.js" type="application/x-javascript" charset="utf-8"></script>
+        <!-- script src="lib/jqtouch/jqtouch.offline.js" type="application/x-javascript" charset="utf-8"></script -->
         <script src="lib/jqt.autotitles.js" type="application/x-javascript" charset="utf-8"></script>
 
+        <script src="lib/cachecontroller.js" type="application/x-javascript" charset="utf-8"></script>
         <script src="lib/scorecard.js" type="application/x-javascript" charset="utf-8"></script>
 
 
@@ -42,32 +44,45 @@
     <body>
         <div id="about" class="selectable">
                 <p><img src="lib/shuttle.png" /></p>
-                <p><strong>Badminton Scorecard</strong><br />Version 0.1<br />
+                <p><strong>Badminton Scorecard</strong><br /><br />
                     <strong>Developed by Mark Ransom</strong></p>
                 <p><em>Enter and monitor team<br /> fixtures and results</em></p>
                 <p>
-                    <a href="mailto:mark.ransom@yahoo.co.uk" target="_blank">mark.ransom@yahoo.co.uk</a>
+                    <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#109;&#097;&#114;&#107;&#046;&#114;&#097;&#110;&#115;&#111;&#109;&#064;&#121;&#097;&#104;&#111;&#111;&#046;&#099;&#111;&#046;&#117;&#107;" target="_blank"> &#109;&#097;&#114;&#107;&#046;&#114;&#097;&#110;&#115;&#111;&#109;&#064;&#121;&#097;&#104;&#111;&#111;&#046;&#099;&#111;&#046;&#117;&#107;</a>
                 </p>
                 <p><br /><br /><a href="#" class="grayButton goback">Close</a></p>
         </div>
+
         <div id="home" class="current">
             <div class="toolbar">
                 <h1>Woodborough</h1>
                 <a class="button slideup" id="infoButton" href="#about">About</a>
             </div>
-			<h2>Club Content</h2>
+
+	    <div id="loader">
+	    	<div class="loader">
+			<img src="lib/loader.gif" alt="Loading cache..." width="31" height="31" />
+			<br />Updating Cache...<br /><br />
+		</div>
+	    </div>
+
+	    
+	    <h2>Scorecards (offline)</h2>
             <ul class="rounded">
                 <li class="arrow"><a href="#teams">Teams</a></li>
+	    </ul>
+            <h2>NottsBA (online)</h2>
+            <ul class="rounded online-required">
+                <li class="forward"><a href="http://www.nottsba.co.uk/mobile/club_tables.php?cnm=woodborough" target="_webapp">League Results</a></li>
+                <li class="forward"><a href="http://www.nottsba.co.uk/mobile/venues.php" target="_webapp">Venues</a></li>
+                <li class="forward"><a href="http://www.nottsba.co.uk/mobile/clubs.php" target="_webapp">Clubs</a></li>
+                <li class="forward"><a href="http://www.nottsba.co.uk/mobile/stringers.php" target="_webapp">Stringers</a></li>
+                <li class="forward"><a href="http://www.nottsba.co.uk/mobile/coaches.php" target="_webapp">Coaches</a></li>
             </ul>
-            <h2>External Links</h2>
-            <ul class="rounded">
-                <li class="forward"><a href="http://www.beeston-valley.co.uk/" target="_blank">Homepage</a></li>
-                <li class="forward"><a href="http://www.nottsba.co.uk" target="_blank">Notts BA</a></li>
-                <li class="forward"><a href="http://www.nottsba.co.uk/summaries/beeston-valley.php" target="_blank">Results Summary</a></li>
+            <ul class="rounded offline-only">
+		<li>Connection not detected</li>
             </ul>
-            <ul class="individual">
-                <li><a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#109;&#097;&#114;&#107;&#046;&#114;&#097;&#110;&#115;&#111;&#109;&#064;&#121;&#097;&#104;&#111;&#111;&#046;&#099;&#111;&#046;&#117;&#107;" target="_blank">Email</a></li>
-            </ul>
+
             <div class="info">
                 <p>Add this page to your home screen to view the custom icon, startup screen, and full screen mode.</p>
             </div>
@@ -80,8 +95,8 @@
             </div>
             <ul class="rounded">
 
-                <li class="arrow"><a href="#M1">Mens 1 <em> Division 4A</em></a></li>
-                <li class="arrow"><a href="#M2">Mens 2 <em> Division 6A</em></a></li>
+                <li class="arrow"><a href="#M1">Mens 1 <small> Division 4A</small></a></li>
+                <li class="arrow"><a href="#M2">Mens 2 <small> Division 5B</small></a></li>
             </ul>
         </div>
 
@@ -91,13 +106,12 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M1-1"><small class="M1-1D"></small><a href="#match">David Lloyd Aspley 1</a><em class="M1-1V"></em></li>
-                <li class="arrow" id="M1-2"><small class="M1-2D"></small><a href="#match">Rolls Royce 3</a><em class="M1-2V"></em></li>
-                <li class="arrow" id="M1-3"><small class="M1-3D"></small><a href="#match">Nottingham Vets 2</a><em class="M1-3V"></em></li>
-                <li class="arrow" id="M1-4"><small class="M1-4D"></small><a href="#match">University 4</a><em class="M1-4V"></em></li>
-                <li class="arrow" id="M1-5"><small class="M1-5D"></small><a href="#match">Woodborough 1</a><em class="M1-5V"></em></li>
-                <li class="arrow" id="M1-6"><small class="M1-6D"></small><a href="#match">Carlton 3</a><em class="M1-6V"></em></li>
-                <li class="arrow" id="M1-7"><small class="M1-7D"></small><a href="#match">East Leake 3</a><em class="M1-7V"></em></li>
+                <li class="arrow" id="M1-1"><a href="#match">Beeston Valley 2  <small class="M1-1D"></small></a></li>
+                <li class="arrow" id="M1-2"><a href="#match">David Lloyd Aspley 1  <small class="M1-2D"></small></a></li>
+                <li class="arrow" id="M1-3"><a href="#match">East Leake 3  <small class="M1-3D"></small></a></li>
+                <li class="arrow" id="M1-4"><a href="#match">Nottingham Vets 2  <small class="M1-4D"></small></a></li>
+                <li class="arrow" id="M1-5"><a href="#match">St Giles 2  <small class="M1-5D"></small></a></li>
+                <li class="arrow" id="M1-6"><a href="#match">West Bridgford &amp; LE 3  <small class="M1-6D"></small></a></li>
             </ul>
         </div>
 
@@ -107,15 +121,15 @@
                 <a href="#" class="back">Teams</a>
             </div>
             <ul class="rounded">
-                <li class="arrow" id="M2-1"><small class="M2-1D"></small><a href="#match">Woodborough 2</a><em class="M2-1V"></em></li>
-                <li class="arrow" id="M2-2"><small class="M2-2D"></small><a href="#match">Unity</a><em class="M2-2V"></em></li>
-                <li class="arrow" id="M2-3"><small class="M2-3D"></small><a href="#match">Carlton 4</a><em class="M2-3V"></em></li>
-                <li class="arrow" id="M2-4"><small class="M2-4D"></small><a href="#match">Radcliffe Knights</a><em class="M2-4V"></em></li>
-                <li class="arrow" id="M2-5"><small class="M2-5D"></small><a href="#match">Experian</a><em class="M2-5V"></em></li>
+                <li class="arrow" id="M2-1"><a href="#match">Beeston Valley 3  <small class="M2-1D"></small></a></li>
+                <li class="arrow" id="M2-2"><a href="#match">East Leake 4  <small class="M2-2D"></small></a></li>
+                <li class="arrow" id="M2-3"><a href="#match">Redhill 2  <small class="M2-3D"></small></a></li>
+                <li class="arrow" id="M2-4"><a href="#match">St Giles 3  <small class="M2-4D"></small></a></li>
+                <li class="arrow" id="M2-5"><a href="#match">Unity  <small class="M2-5D"></small></a></li>
             </ul>
         </div>
 
-        <div id="match">
+	<div id="match">
             <div class="toolbar">
                 <h1>Match</h1>
                 <a class="back" href="#">back</a>
@@ -123,146 +137,178 @@
             </div>
 
             <h2>Opposition Team</h2>
-            	<ul class="rounded"><li><input type="text" id="oppTeam" placeholder="Enter team name" /></li></ul>
+		<ul class="rounded"><li class="oppTeam"></li></ul>
             <h2>Venue</h2>
             	<ul class="rounded"><li><input type="text" id="matchVenue" placeholder="Enter match venue" /></li></ul>
-            <h2>Courts</h2>
-            	<ul class="rounded"><li><input type="text" id="matchDate" placeholder="Enter match date" /></li></ul>
-            	<ul class="rounded"><li><input type="text" id="matchTime" placeholder="Enter match time" /></li></ul>
-            	<ul class="rounded"><li><input type="text" id="numCourts" placeholder="Enter number of courts" /></li></ul>
-            	<ul class="rounded"><li><input type="text" id="homeaway" placeholder="Home or Away" /></li></ul>
+            <h2>Other Details</h2>
+            	<ul class="individual">
+		<li><input type="text" id="matchDate" placeholder="Match Date" /></li>
+            	<li><input type="text"  pattern="[0-9]*" id="matchTime" placeholder="Start Time" /></li></ul>
+            	<ul class="individual">
+		<li><select id="homeaway">
+				<option value ="Home">Home</option>
+				<option value ="Away">Away</option>
+		</select></li>
+		<li><select id="numCourts">
+				<option value ="1">1 Pair</option>
+				<option value ="2">2 Pairs</option>
+				<option value ="3">3 Pairs</option>
+		</select></li></ul>
 
             	<ul class="individual">
-	            	<li><a href="#scorecard">Scorecard</a></li>
-	            	<li><a href="#ourPlayers">Players</a></li>
+	            	<li><a href="#" id="match2ourPlayers">Players</a></li>
+	            	<li><a href="#" id="match2scorecard">Scorecard</a></li>
 		</ul>
 	</div>
 
-        <div id="scorecard">
+	<div id="scorecard">
             <div class="toolbar">
                 <h1>Scorecard</h1>
-                <a class="back" href="#">Match</a>
-                <a class="button slideup" id="AltView" href="#">Alt View</a>
+                <a class="back" href="#scorecard">Match</a>
             </div>
-            <h2>Rubbers</h2>
-            <ul class="individual">
-			</ul>
-            <table class="overview">
-            	<tr align="center">
+        <ul class="individual">
+		<li><select id="toggleTeam">
+				<option value ="0">Home</option>
+				<option value ="1">Away</option>
+				<option value ="2">Home - Away</option>
+		</select></li>
+		<li><select id="toggleType">
+				<option value ="0">Sequence</option>
+				<option value ="1">Rubbers</option>
+				<option value ="2">Games</option>
+				<option value ="3">Aces</option>
+		</select></li></ul>
+
+		<table id="ovtable" class="overview">
+            	<tr>
             		<td class="rubber" id="h1v1">1</td>
             		<td class="rubber" id="h1v2">8</td>
             		<td class="rubber" id="h1v3">6</td>
+            		<td class="ovcolumn" id="h1v4">Tap</td>
             	</tr>
-            	<tr align="center">
+            	<tr>
             		<td class="rubber" id="h2v1">4</td>
             		<td class="rubber" id="h2v2">2</td>
             		<td class="rubber" id="h2v3">9</td>
+            		<td class="ovcolumn" id="h2v4">cells</td>
             	</tr>
-            	<tr align="center">
+            	<tr>
             		<td class="rubber" id="h3v1">7</td>
             		<td class="rubber" id="h3v2">5</td>
             		<td class="rubber" id="h3v3">3</td>
+            		<td class="ovcolumn" id="h3v4">to edit</td>
             	</tr>
-            </table>
-		<br />			
-	    <h2>Summary</h2>
-            <table class="summary">
-            	<tr align="center">
+            	<tr id="ovtotals">
+            		<td class="ovrow" id="h4v1">-</td>
+            		<td class="ovrow" id="h4v2">-</td>
+            		<td class="ovrow" id="h4v3">-</td>
+            		<td class="ovrow" id="h4v4">-</td>
+            	</tr>
+		</table>
+
+		<br />
+
+		<table id="ovsummary" class="summary">
+            	<tr>
             		<td></td>
             		<td>Rubbers</td>
             		<td>Games</td>
             		<td>Aces</td>
             	</tr>
-            	<tr align="center">
+            	<tr>
             		<td id="homeClub"></td>
             		<td id="homeRubbers"></td>
             		<td id="homeGames"></td>
             		<td id="homeAces"></td>
             	</tr>
-            	<tr align="center">
+            	<tr>
             		<td id="awayClub"></td>
             		<td id="awayRubbers"></td>
             		<td id="awayGames"></td>
             		<td id="awayAces"></td>
             	</tr>
-            </table>
+		</table>
 	</div>
-
-        <div id="rubber">
-            <div class="toolbar">
+	<div id="rubber">
+		<div class="toolbar">
                 <h1>Rubber</h1>
                 <a class="back" href="#">Back</a>
                 <a class="button slideup" id="SaveRubber" href="#">Save</a>
-            </div>
-            <h2>Games</h2>
-	    <table class="overview">
-            	<tr align="center">
-            		<td><input type="score" id="g1h" placeholder="?" /></td>
+		</div>
+		<h2>Games</h2>
+		<table class="overview">
+            	<tr>
+            		<td><input type="text" pattern="[0-9]*" class="score" id="g1h" placeholder="?" alt="home score for game 1"/></td>
             		<td>-</td>
-            		<td><input type="score" id="g1a" placeholder="?" /></td>
+            		<td><input type="text" pattern="[0-9]*" class="score" id="g1a" placeholder="?" alt="away score for game 1"/></td>
             	</tr>
-            	<tr align="center">
-            		<td><input type="score" id="g2h" placeholder="?" /></td>
+            	<tr>
+            		<td><input type="text" pattern="[0-9]*" class="score" id="g2h" placeholder="?" alt="home score for game 2"/></td>
             		<td>-</td>
-            		<td><input type="score" id="g2a" placeholder="?" /></td>
+            		<td><input type="text" pattern="[0-9]*" class="score" id="g2a" placeholder="?" alt="away score for game 2"/></td>
             	</tr>
-            	<tr align="center">
-            		<td><input type="score" id="g3h" placeholder="?" /></td>
+            	<tr>
+            		<td><input type="text" pattern="[0-9]*" class="score" id="g3h" placeholder="?" alt="home score for game 3"/></td>
             		<td>-</td>
-            		<td><input type="score" id="g3a" placeholder="?" /></td>
+            		<td><input type="text" pattern="[0-9]*" class="score" id="g3a" placeholder="?" alt="away score for game 3"/></td>
             	</tr>
-            </table>
-            <h2><div class="ourClub"></div></h2>
-            <ul class="rounded">
-            	<li><div id="ourPlayerA"></div></li>
-            	<li><div id="ourPlayerB"></div></li>
-	    </ul>
-            <h2><div class="oppPairFull"></div></h2>
+		</table>
+		<div class="ourClub"></div>
+		<ul class="rounded">
+			<li><div id="ourPlayerA"></div></li>
+			<li><div id="ourPlayerB"></div></li>
+		</ul>
+ 		<div class="oppPairFull"></div>
 	</div>
 
         <div id="ourPlayers">
             <div class="toolbar">
-                <h1>Mens 2 Team</h1>
-                <a class="back" href="#">back</a>
+                <h1>Our Team</h1>
+                <a class="back" href="#match">Match</a>
                 <a class="button slideup" id="SavePlayers" href="#">Save</a>
             </div>
 
             <h2>Pair 1</h2>
-            	<ul class="rounded"><li><input type="text" id="ourPlayer1" placeholder="Enter player name" /></li></ul>
-            	<ul class="rounded"><li><input type="text" id="ourPlayer2" placeholder="Enter player name" /></li></ul>
-            <h2>Pair 2</h2>
-            	<ul class="rounded"><li><input type="text" id="ourPlayer3" placeholder="Enter player name" /></li></ul>
-            	<ul class="rounded"><li><input type="text" id="ourPlayer4" placeholder="Enter player name" /></li></ul>
-            <h2>Pair 3</h2>
-            	<ul class="rounded"><li><input type="text" id="ourPlayer5" placeholder="Enter player name" /></li></ul>
-            	<ul class="rounded"><li><input type="text" id="ourPlayer6" placeholder="Enter player name" /></li></ul>
-
             	<ul class="individual">
-	            	<li><a href="#scorecard">Scorecard</a></li>
-	            	<li><a href="#oppPlayers">Opposition</a></li>
+		<li><input type="text" id="ourPlayer1" placeholder="Enter player name" /></li>
+            	<li><input type="text" id="ourPlayer2" placeholder="Enter player name" /></li></ul>
+            <h2>Pair 2</h2>
+            	<ul class="individual">
+		<li><input type="text" id="ourPlayer3" placeholder="Enter player name" /></li>
+            	<li><input type="text" id="ourPlayer4" placeholder="Enter player name" /></li></ul>
+            <h2>Pair 3</h2>
+            	<ul class="individual">
+		<li><input type="text" id="ourPlayer5" placeholder="Enter player name" /></li>
+            	<li><input type="text" id="ourPlayer6" placeholder="Enter player name" /></li></ul>
+
+		<ul class="individual">
+	            	<li><a href="#" id="ourPlayers2oppPlayers">Opposition</a></li>
+	            	<li><a href="#" id="ourPlayers2scorecard">Scorecard</a></li>
 		</ul>
 	</div>
-
         <div id="oppPlayers">
             <div class="toolbar">
                 <h1>Opposition</h1>
-                <a class="back" href="#">back</a>
+                <a class="back" href="#match">Match</a>
                 <a class="button slideup" id="SavePlayers2" href="#">Save</a>
             </div>
 
             <h2>Pair 1</h2>
-            	<ul class="rounded"><li><input type="text" id="oppPlayer1" placeholder="Enter player name" /></li></ul>
-            	<ul class="rounded"><li><input type="text" id="oppPlayer2" placeholder="Enter player name" /></li></ul>
-            <h2>Pair 2</h2>
-            	<ul class="rounded"><li><input type="text" id="oppPlayer3" placeholder="Enter player name" /></li></ul>
-            	<ul class="rounded"><li><input type="text" id="oppPlayer4" placeholder="Enter player name" /></li></ul>
-            <h2>Pair 3</h2>
-            	<ul class="rounded"><li><input type="text" id="oppPlayer5" placeholder="Enter player name" /></li></ul>
-            	<ul class="rounded"><li><input type="text" id="oppPlayer6" placeholder="Enter player name" /></li></ul>
-
             	<ul class="individual">
-	            	<li><a href="#scorecard">Scorecard</a></li>
-	            	<li><a href="#ourPlayers">Mens 2 Team</a></li>
+		<li><input type="text" id="oppPlayer1" placeholder="Enter player name" /></li>
+            	<li><input type="text" id="oppPlayer2" placeholder="Enter player name" /></li></ul>
+            <h2>Pair 2</h2>
+            	<ul class="individual">
+		<li><input type="text" id="oppPlayer3" placeholder="Enter player name" /></li>
+            	<li><input type="text" id="oppPlayer4" placeholder="Enter player name" /></li></ul>
+            <h2>Pair 3</h2>
+            	<ul class="individual">
+		<li><input type="text" id="oppPlayer5" placeholder="Enter player name" /></li>
+            	<li><input type="text" id="oppPlayer6" placeholder="Enter player name" /></li></ul>
+
+		<ul class="individual">
+	            	<li><a href="#" id="oppPlayers2scorecard">Scorecard</a></li>
+	            	<li><a href="#" id="oppPlayers2ourPlayers">Our Team</a></li>
 		</ul>
 	</div>
 
